1. add to cart button preferences changed 2. cross button takes us to the top bug removed 3. clicking back on the product page takes us to the previously scrolled position in the category page 4. Google tag manager included. 5. Google Analytics added for test.rooja.com

--- a/app/design/frontend/default/rooja/template/catalog/product/view/addtocart.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view/addtocart.phtml
@@ -33,6 +33,16 @@ return ( charCode >= 48 && charCode <= 57 );
 }
 </script>
 
+<script type="text/javascript">
+function actiononaddtocart()
+{
+	if(Mage.Cookies.get('member') == "Yes")
+		showLogin();
+	else
+		showJoin();
+}
+</script>
+
 <?php $_helper = $this->helper('catalog/output'); ?>
 <?php $_product = $this->getProduct(); ?>
 <?php //var_export($_product); ?>
@@ -67,7 +77,7 @@ return ( charCode >= 48 && charCode <= 57 );
 				
 				    <button class="tr" id="addToBagBtn" onclick="productAddToCartForm.submit()"><span><?php echo $this->__('Add to Cart') ?></span></button>
 				<?php } else { ?>
-				    <span class="tr" id="addToBagBtn" onclick="showLogin()"><span><?php echo $this->__('Add to Cart') ?></span></span>
+				    <span class="tr" id="addToBagBtn" onclick="actiononaddtocart()"><span><?php echo $this->__('Add to Cart') ?></span></span>
 				<?php } ?>
 				    <?php /* Magento needs this as a button not a link
 					<a href="" class="tr" id="addToBagBtn" onclick="productAddToCartForm.submit(this)"></a>
