auto-load + login + floating back to top

--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -208,8 +208,7 @@ $expired = 1;
 
     <?php echo $this->getProductListHtml() ?>
 
-	<a href="#" class="backToTop fr">Back to Top</a>
-
+	<a href="#" class="backToTop fr"><img id="back to top" src="<?php echo $this->getSkinUrl();?>images/backtotop.gif" width=40px/></a>
 	<br class="clear">
 
 	</div>
