--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -50,6 +50,25 @@
 
 ?>
 
+<script type="text/javascript">
+    jQuery(document).ready(function(){ 
+ 
+        jQuery(window).scroll(function(){
+            if (jQuery(this).scrollTop() > 100) {
+                jQuery('.backToTop').fadeIn();
+            } else {
+                jQuery('.backToTop').fadeOut();
+            }
+        }); 
+ 
+        jQuery('.backToTop').click(function(){
+            jQuery("html, body").animate({ scrollTop: 0 }, 600);
+            return false;
+        });
+ 
+    });
+</script>
+
 <?php
 
 /**
@@ -109,8 +128,6 @@ $expired = 1;
 
 
 ?>
-
-
 
 
 
@@ -204,6 +221,8 @@ $expired = 1;
 
 
     <?php echo $this->getProductListHtml() ?>
+
+
 
 	<a href="#" class="backToTop fr"><img id="back to top" src="<?php echo $this->getSkinUrl();?>images/backtotop.gif" width=40px/></a>
 	<br class="clear">
