--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -50,23 +50,23 @@
 
 ?>
 
+
 <script type="text/javascript">
-    jQuery(document).ready(function(){ 
- 
-        jQuery(window).scroll(function(){
+
+
+	jQuery(window).scroll(function(){
             if (jQuery(this).scrollTop() > 100) {
                 jQuery('.backToTop').fadeIn();
             } else {
                 jQuery('.backToTop').fadeOut();
             }
         }); 
- 
+	jQuery(document).ready(function(){
         jQuery('.backToTop').click(function(){
             jQuery("html, body").animate({ scrollTop: 0 }, 600);
             return false;
         });
- 
-    });
+});
 </script>
 
 <?php
@@ -209,7 +209,7 @@ $expired = 1;
 
 		<figure id="inviteFriends" class="sideAd-orange">
 
-			<p>Invite 10 friends to Rooja and get free shipping for 2 months</p>
+			<p>Invite 10 friends to Rooja and get Rs. 500</p>
 
 		</figure>
 
@@ -224,7 +224,7 @@ $expired = 1;
 
 
 
-	<a href="#" class="backToTop fr"><img id="back to top" src="<?php echo $this->getSkinUrl();?>images/backtotop.gif" width=40px/></a>
+	<a href="javascript:;" class="backToTop fr"><img id="back to top" src="<?php echo $this->getSkinUrl();?>images/backtotop.gif" width=40px/></a>
 	<br class="clear">
 
 	</div>
