--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -558,7 +558,7 @@ else {$customer = "Guest";}
 
 		<ul id="myAccount">
 
-			<li class="ignore-item"><a href="/rewardsref/customer/index/">Invite Friends and Earn Free Shipping</a></li>
+			<li class="ignore-item"><a href="/rewardsref/customer/index/">Invite Friends and Earn Rs. 500</a></li>
 
 			<li class="welcome-top"><a href="javascript:;" title="">Welcome <?php if($session->isLoggedIn()) { echo substr($customer->getFirstname(), 0, 12);} else { echo $customer; } ?></a>
 
