--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/progress_bar.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/progress_bar.phtml
@@ -20,7 +20,7 @@
 		$awayFrom10 = 10 - $referrerCount;
 		//echo $numSignedUp;
 	?>
-	<h3 class="fr" id="howClose"><?php if($referrerCount > 9){ echo "Congratulations. Enjoy Free Shipping for 2 months. Use coupon code <span>ROFSVIPOJA</span> at checkout."; }else{ ?>Invite <?php echo $awayFrom10 ?> more friends to get Free Standard Shipping for 2 months.<?php } ?><br>Bonus: Rs. 1000 credit when your friend makes first Rs.1000 purchase within 30 days of joining.</h3>
+	<h3 class="fr" style="margin-left:50px;" id="howClose"><?php if($referrerCount > 9){ echo "Congratulations. You just earned Rs. 500. Use coupon code <span>ROFSVIPOJA</span> at checkout."; }else{ ?>Invite <?php echo $awayFrom10 ?> more friends to get Free Rs. 500.<?php } ?><br>Bonus: Rs. 500 credit when your friend makes first Rs. 500 purchase within 30 days of joining.</h3>
 	<span id="referralBar" class="clear"><span id="numReferrals" style="width:<?php echo $referrerPercent; ?>%;"></span></span>
   
 <?php endif ?>
