Invite Friends text corrected

--- a/app/design/frontend/default/rooja/template/catalog/category/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/category/view.phtml
@@ -209,7 +209,7 @@ $expired = 1;
 
 		<figure id="inviteFriends" class="sideAd-orange">
 
-			<p>Invite 1 friend to Rooja and get Rs. 500</p>
+			<p>Invite a friend to Rooja and get Rs. 500</p>
 
 		</figure>
 
