--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -98,6 +98,7 @@ P.S. Hurry!"/>
 <?php echo $this->helper('core/js')->getTranslatorScript() ?>
 <?php echo $this->getIncludes() ?>
 
+<!--KISSMETRICS-->
 <script type="text/javascript">
   var _kmq = _kmq || [];
   var _kmk = _kmk || '7f1af07d4746e34caa6679fe0c879c2f6cabe6c5';
