Like button now showing up in FireFox/IE

--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -236,7 +236,11 @@ echo $likes = $xml->link_stat->like_count;
 
 	jQuery(document).click(function() {
 		savescroll();
-	});	
+	});
+
+	jQuery(window).unload(function() {
+		Mage.Cookies.delete('scroll');
+	});
 
 	function prodHover(){
 
