--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -90,6 +90,16 @@ P.S. Hurry!"/>
 <script src="http://ie7-js.googlecode.com/svn/version/2.1(beta4)/IE9.js"></script>
 <![endif]-->
 
+<!-- Start BounceX tag. Deploy at the beginning of document head. -->
+	<script>
+	(function(d) {
+		var e = d.createElement('script');
+		e.src = d.location.protocol + '//bounceexchange.com/bounce/i.js?client_id=611';
+		e.async = true;
+		d.getElementsByTagName("head")[0].appendChild(e);
+	 }(document));
+	 </script>
+<!-- End BounceX tag -->
 
 <script type="text/javascript" src="http://use.typekit.com/egn2yyl.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
