Wrong coupon code thing fixed

--- a/app/design/frontend/default/rooja/template/rewardsref/customer/referral/affiliate.phtml
+++ b/app/design/frontend/default/rooja/template/rewardsref/customer/referral/affiliate.phtml
@@ -1,6 +1,6 @@
 <div class="page-invite">
 	<fieldset>
-			<h3 class="page-invite-head">Invite your Friends to Join Rooja!</h3>
+			<h3 class="page-invite-head">Invite friends and get Rs 500 when your friend completes their first purchase. Points will be credited to your account which can be used in any future order!</h3>
 			<p>Copy this link and paste the URL below into Twitter, Facebook or an Email</p>
 	        
 		       <input class="invite-input" id="referralLink" type="text" value="<?php echo $this->getReferralUrl(); ?>" />
