--- a/app/design/frontend/default/rooja/template/page/html/header.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/header.phtml
@@ -162,7 +162,7 @@ function removewrapper(parameter){
 		jQuery('#rooja_login_wrapper').hide();
 	else
 		jQuery('#rooja_signup_wrapper').hide();
-	_gaq.push(['_trackEvent','cross','click','closebox']);
+	_gaq.push(['_trackEvent','cross','click']);
 }
 
  /*Ajax Login Function */
