Pin button again shifted

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -189,7 +189,7 @@ $xml = simplexml_load_string($xml);
 echo '<span>' .  '</span>';
 ?> people like this</p>
 			
-			<section style="position:absolute;margin-left:180px;margin-top:-38px">
+			<section style="position:relative;left:185px;top:-38px">
 			<!--START PIN BUTTON-->
 			<?php
   				  $_pinlink['url'] = $_product->getProductUrl();                      
