--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -1,9 +1,9 @@
 <script type="text/javascript">
-jQuery(document).ready(function(){
-        jQuery('img.lazy').jail({
-                effect       : "fadeIn"
-        });
-});
+//jQuery(document).ready(function(){
+//        jQuery('img.lazy').jail({
+//                effect       : "fadeIn"
+//        });
+//});
 </script>
 
 <?php
@@ -150,7 +150,7 @@ echo '<span class="numLeft">'.$stock_count.'</span>';
 
 			
 
-			<a href="<?php echo $_product->getProductUrl() ?>"><img class="lazy" data-src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image'); ?>" src="<?php echo $this->getSkinUrl();?>images/loader.gif" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" /></a>      
+			<a href="<?php echo $_product->getProductUrl() ?>"><img src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image'); ?>" alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" /></a>      
 			<article class="productCore<?php if(!$_product->isSaleable()){ echo ' soldOut'; } ?>">
 
 				<?php /*if($boutique==0){ ?><span class="numLikes">
