--- a/app/design/frontend/default/rooja/template/page/html/footer.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/footer.phtml
@@ -59,18 +59,20 @@
 		</ul>
 		</section>
 		<section class="col1 fl noMargin">
-		    <script type="text/javascript" src="http://twitter.com/javascripts/blogger.js"></script>
-			<ul id="twitter_update_list"><p>Loading Tweets..</p></ul>
-            <script type="text/javascript" src="http://api.twitter.com/1/statuses/user_timeline.json?screen_name=roojafashion&include_rts=true&count=1&callback=twitterCallback2"></script>
-			<ul id="socialLinks">
-				<li><a href="http://twitter.com/roojafashion" title="Follow us on Twitter" target="_blank"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-brown.png') ?>" alt="Twitter icon">Follow us on Twitter</a></li>
-				<li><a href="http://www.facebook.com/roojafashion" title="Like us on Facebook" target="_blank"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-brown.png') ?>" alt="Facebook icon">Join us on Facebook</a></li>
-			</ul>
+		    
+            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/RoojaFashion" data-widget-id="349837356355973120">Tweets by @RoojaFashion</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 			<br>
 			<!--<a href="http://mixpanel.com/f/partner"><img src="http://mixpanel.com/site_media/images/partner/badge_blue.png" alt="Web Analytics" /></a>-->
 		</section>
+		<section>
+		<ul id="socialLinks">
+				<li><a href="http://twitter.com/roojafashion" title="Follow us on Twitter" target="_blank"><img src="<?php echo $this->getSkinUrl('images/icons/twitter-brown.png') ?>" alt="Twitter icon">Follow us on Twitter</a></li>
+				<li><a href="http://www.facebook.com/roojafashion" title="Like us on Facebook" target="_blank"><img src="<?php echo $this->getSkinUrl('images/icons/facebook-brown.png') ?>" alt="Facebook icon">Join us on Facebook</a></li>
+			</ul>
+		</section>
 		
-		<p id="copyrightInfo" class="fl clear">Copyright &copy; 2011 Rooja. all work is an act of <a href="http://gophilosophie.com" target="_blank" title="Site design and development by philosophie interactive">philosophie</a></p>
+		<p id="copyrightInfo" class="fl clear">Copyright &copy; 2013 Rooja. all work is an act of <a href="http://gophilosophie.com" target="_blank" title="Site design and development by philosophie interactive">philosophie</a></p>
 	</div>
 </footer>
 <!-- begin olark code --><script type='text/javascript'>/*{literal}<![CDATA[*/window.olark||(function(i){var e=window,h=document,a=e.location.protocol=="https:"?"https:":"http:",g=i.name,b="load";(function(){e[g]=function(){(c.s=c.s||[]).push(arguments)};var c=e[g]._={},f=i.methods.length; while(f--){(function(j){e[g][j]=function(){e[g]("call",j,arguments)}})(i.methods[f])} c.l=i.loader;c.i=arguments.callee;c.f=setTimeout(function(){if(c.f){(new Image).src=a+"//"+c.l.replace(".js",".png")+"&"+escape(e.location.href)}c.f=null},20000);c.p={0:+new Date};c.P=function(j){c.p[j]=new Date-c.p[0]};function d(){c.P(b);e[g](b)}e.addEventListener?e.addEventListener(b,d,false):e.attachEvent("on"+b,d); (function(){function l(j){j="head";return["<",j,"></",j,"><",z,' onl'+'oad="var d=',B,";d.getElementsByTagName('head')[0].",y,"(d.",A,"('script')).",u,"='",a,"//",c.l,"'",'"',"></",z,">"].join("")}var z="body",s=h[z];if(!s){return setTimeout(arguments.callee,100)}c.P(1);var y="appendChild",A="createElement",u="src",r=h[A]("div"),G=r[y](h[A](g)),D=h[A]("iframe"),B="document",C="domain",q;r.style.display="none";s.insertBefore(r,s.firstChild).id=g;D.frameBorder="0";D.id=g+"-loader";if(/MSIE[ ]+6/.test(navigator.userAgent)){D.src="javascript:false"} D.allowTransparency="true";G[y](D);try{D.contentWindow[B].open()}catch(F){i[C]=h[C];q="javascript:var d="+B+".open();d.domain='"+h.domain+"';";D[u]=q+"void(0);"}try{var H=D.contentWindow[B];H.write(l());H.close()}catch(E){D[u]=q+'d.write("'+l().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}c.P(2)})()})()})({loader:(function(a){return "static.olark.com/jsclient/loader0.js?ts="+(a?a[1]:(+new Date))})(document.cookie.match(/olarkld=([0-9]+)/)),name:"olark",methods:["configure","extend","declare","identify"]});
