Copyright@Rooja removed| Kissmetrics enabled

--- a/app/design/frontend/default/rooja/template/catalog/product/list.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/list.phtml
@@ -150,8 +150,7 @@ echo '<span class="numLeft">'.$stock_count.'</span>';
 
 			
 
-			<a href="<?php echo $_product->getProductUrl() ?>"><img class="lazy" data-src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image'); ?>" src="<?php echo $this->getSkinUrl();?>images/loader.gif"  alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" />
-			<!--<div style="display:none;position:absolute;top:10px;left:60px" class="fb-like" data-href="<?php echo $_product->getProductUrl() ?>" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>--></a>      
+			<a href="<?php echo $_product->getProductUrl() ?>"><img class="lazy" data-src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image'); ?>" src="<?php echo $this->getSkinUrl();?>images/loader.gif"  alt="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>" /></a>
 			<article class="productCore<?php if(!$_product->isSaleable()){ echo ' soldOut'; } ?>">
 
 				<?php /*if($boutique==0){ ?><span class="numLikes">
@@ -178,7 +177,8 @@ echo $likes = $xml->link_stat->like_count;
 
 				</span><?php }*/ ?>
 			
-     		
+			<!--<div style="display:none;position:absolute;top:-285px;left:60px" class="fb-like" data-href="<?php echo $_product->getProductUrl() ?>" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+			-->
 			<p class="price"><span class="livePrice">		
 
 				<?php if (!$fbprice == null) { ?>
@@ -221,21 +221,11 @@ echo $likes = $xml->link_stat->like_count;
   p.src = '//assets.pinterest.com/js/pinit.js';
   f.parentNode.insertBefore(p, f);
 }(document));
-
-(function(d){
-  var f = d.getElementsByTagName('SCRIPT')[0], p = d.createElement('SCRIPT');
-  p.type = 'text/javascript';
-  p.setAttribute('data-pin-hover', true);
-  p.async = false;
-  p.src = '//connect.facebook.net/en_GB/all.js';
-  f.parentNode.insertBefore(p, f);
-}(document));
 </script>
 
 <script type="text/javascript">
-
+	
 	jQuery(document).ready(function(){
-
 		prodHover();
 
 		//if(Mage.Cookies.get('scroll') != null)
@@ -252,27 +242,17 @@ echo $likes = $xml->link_stat->like_count;
 	//	Mage.Cookies.delete('scroll');
 	//});
 
-	//var like_count = 0;
-
 	function prodHover(){
 
 	    jQuery(".product").hover(function () {
+			jQuery(this).find('.productName').fadeIn(500);
+		//	jQuery(this).find('.fb-like').show();		
+		   },
 
-		    jQuery(this).find('.productName').fadeIn(500);
-	/*	    if(like_count<1){
-		    	jQuery('.product').append('<div id="like" style="position:absolute;top:10px;left:60px" class="fb-like" data-href="<?php echo $_product->getProductUrl() ?>" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false"></div>');
-		    	FB.XFBML.parse(document.getElementById('like'));
-		    	like_count++;
-		    }
-		    else
-	*/	    	jQuery(this).find('.fb-like').show();
-		    
-		  }, 
-
-		  function () {
+		function () {
 
 		    jQuery(this).find('.productName').fadeOut(500);
-		    jQuery(this).find('.fb-like').hide();
+		//    jQuery(this).find('.fb-like').hide();
 
 		  });
 
