--- a/app/design/frontend/default/rooja/template/page/html/head.phtml
+++ b/app/design/frontend/default/rooja/template/page/html/head.phtml
@@ -108,10 +108,10 @@ P.S. Hurry!"/>
 <?php echo $this->helper('core/js')->getTranslatorScript() ?>
 <?php echo $this->getIncludes() ?>
 
-<!--KISSMETRICS-->
+<!--Start KissMetrics-->
 <script type="text/javascript">
   var _kmq = _kmq || [];
-  var _kmk = _kmk || '7f1af07d4746e34caa6679fe0c879c2f6cabe6c5';
+  var _kmk = _kmk || '3c321ac14ccbd58e7770750a7882da6d33edf808';
   function _kms(u){
     setTimeout(function(){
       var d = document, f = d.getElementsByTagName('script')[0],
@@ -123,19 +123,7 @@ P.S. Hurry!"/>
   _kms('//i.kissmetrics.com/i.js');
   _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
 </script>
-
-
-<script type="text/javascript">
-//  var _kmq = _kmq || [];
-//  function _kms(u){
-//    setTimeout(function(){
-//      var s = document.createElement('script'); var f = document.getElementsByTagName('script')[0]; s.type = 'text/javascript'; s.async = true;
-//      s.src = u; f.parentNode.insertBefore(s, f);
-//    }, 1);
-//  }
-//  _kms('//i.kissmetrics.com/i.js');_kms('//doug1izaerwt3.cloudfront.net/90e261dfe8177c022fecc9c459eb2c4e1a6fc4d0.1.js');
-
-</script>
+<!--End KissMetrics-->
 
 
 <!-- start Mixpanel --><script type="text/javascript">var mpq=[];mpq.push(["init","f0d20a4dd829381053e74b75f8fd373f"]);(function(){var b,a,e,d,c;b=document.createElement("script");b.type="text/javascript";b.async=true;b.src=(document.location.protocol==="https:"?"https:":"http:")+"//api.mixpanel.com/site_media/js/api/mixpanel.js";a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(b,a);e=function(f){return function(){mpq.push([f].concat(Array.prototype.slice.call(arguments,0)))}};d=["init","track","track_links","track_forms","register","register_once","identify","name_tag","set_config"];for(c=0;c<d.length;c++){mpq[d[c]]=e(d[c])}})();
