--- a/app/design/frontend/default/rooja/template/ajaxscroll/ias.phtml
+++ b/app/design/frontend/default/rooja/template/ajaxscroll/ias.phtml
@@ -63,19 +63,16 @@ jQuery.ias({
 	loader: '<div style="display:block;clear:both;height:30px;width:100%;"><img src="<?php echo($this->getSkinUrl('images/Loading_rooja.gif'));  ?>" width="30" /><br><br>Hang on! Loading more products...</div>',
 
 	onRenderComplete : function(items) {  
-	//FB.XFBML.parse();
- 	
-	      jQuery(".product").hover(function () {
-
+	// FB.XFBML.parse(); 
+	      	jQuery(".product").hover(function () {
 		    jQuery(this).find('.productName').fadeIn(500);
-			jQuery(this).find('.fb-like').show();
-		  	
+	//	    jQuery(this).find('.fb-like').show();	  	
 		}, 
 
-		  function () {
+		function () {
 
 		    jQuery(this).find('.productName').fadeOut(500);
-			jQuery(this).find('.fb-like').hide();
+	//	    jQuery(this).find('.fb-like').hide();
 
 		  });
 
