Boutique heading removed

--- a/app/design/frontend/default/rooja/template/catalog/product/boutique.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/boutique.phtml
@@ -34,7 +34,7 @@
 <section id="extraSales">
 	<div class="container">
 		<section id="endingSoon" class="clear">
-			<h2>Boutiques</h2>
+		<!--	<h2>Boutiques</h2> -->
 <?php 
 // this section load from Mage_Catalog_Block_Product_Homepage
 	$boutique_collction = $this->homePageBoutique();
