--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -610,9 +610,9 @@ h3 .product-name {
 #extraSales{overflow:hidden;padding-bottom:30px;}
 #endingSoon h2, #boutiquesHome h2{text-transform:uppercase;color:#c60;margin:15px 0;overflow:hidden;}
 
-.saleDetails{margin-right:18px;text-align:center;}
+.saleDetails{margin-right:18px;text-align:center;width:350px;}
 .saleDetails img{margin-bottom:15px;}
-.saleDetails h3{margin-bottom:10px;}
+.saleDetails h3{margin-bottom:10px;line-height:26px}
 .saleDetails p{color:#c60;}
 
 #upcomingSales{padding:12px 8px;background-color:#d2dddf;color:#555;margin-top:54px;width:214px;}
